# gst-plugins-bad

gst/: meson.build
gst/audiovisualizers/: .gstspectrogramscope.c.swp  .gstspectrogramscope.h.swp
gst/event_emitters/: Makefile.am  gstplugin.c  gstplugin.h  gstpowereventemitter.c  gstpowereventemitter.h  meson.build
